plugins {
    id 'maven-publish'
    id "com.palantir.git-version" version "0.12.3"
}

subprojects {
    group = 'com.unidev.platform'
    version = gitVersion()

    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'maven-publish'
    apply plugin: 'java-library'

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17


    repositories {
        mavenCentral()
        jcenter()
        maven {
            url "https://mvn.universal-development.com/public"
        }
    }

    dependencies {

        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        implementation 'org.slf4j:slf4j-api:1.7.21'
        implementation 'org.slf4j:slf4j-simple:1.7.21'


        testImplementation 'org.mockito:mockito-all:1.10.19'
        testImplementation 'org.hamcrest:hamcrest-all:1.3'
        testImplementation 'org.assertj:assertj-core:3.9.1'

        testImplementation "org.junit.jupiter:junit-jupiter:${junitJupiterVersion}"

    }
    idea {
        module {
            downloadJavadoc = true
            downloadSources = true
        }
    }

    test {
        useJUnitPlatform()
    }

    task sourcesJar(type: Jar, dependsOn: classes) {
        classifier = 'sources'
        from sourceSets.main.allSource
    }

    javadoc.failOnError = false
    task javadocJar(type: Jar, dependsOn: javadoc) {
        classifier = 'javadoc'
        from javadoc.destinationDir
    }

    artifacts {
        archives sourcesJar
        archives javadocJar
    }

    java {
        withJavadocJar()
        withSourcesJar()
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
            }
        }
    }
}
